# CMakeSampleProject

./: README.md
MyProject/: CMakeLists.txt
MyProject/src/: main.cpp
